UI changes fixed overflow issue in category pages

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,8 +1,9 @@
 .banner-wrap img {
   width: 100%;
-  height: 16rem;
+  height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
-  object-position: center;
+  background:  #232a34;
 }
 
 .banner-wrap .banner-title {
@@ -15,11 +16,31 @@
   letter-spacing: -2px;
   font-weight: 700;
   background-color: transparent;
+  z-index: 3;
+  max-width:  1200px;
+  position: absolute;
+  padding: 8px 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
   .banner-wrap .banner-title {
-    top: 22%;
-    font-size: 2rem;
+    color: #fff;
+    font-size: 48px;
+    text-align: center;
   }
+}
+
+
+@media screen and (max-width: 768px){
+  .banner-wrap .banner-title {
+  font-size: 40px;
+  }
+}
+@media screen and (max-width: 480px){
+  .banner-wrap .banner-title {
+    font-size: 32px;
+    }
 }
